src/objects/Strategy_Plan__c.object
<CustomObject>
    <description>To be used to capture Client and Prospect strategy plans</description>
    <fields>
        <fullName>AUM__c</fullName>
        <label>AUM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Separate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Analyst_Meeting_Goal_Counter__c</fullName>
        <label>Analyst Meeting Goal Counter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Analyst_Meeting_Goal__c</fullName>
        <label>Analyst Meeting Goal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approx_Min_Fee__c</fullName>
        <label>Approx. Min Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Blended_Research__c</fullName>
        <inlineHelpText>Research Objectives for Blended Research Strategies</inlineHelpText>
        <label>Research Goals - Blended Research</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Business_Channels__c</fullName>
        <label>Business Channels</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Client_Engagement_Counter__c</fullName>
        <label>Client Engagement Goal Counter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Engagement_Goal__c</fullName>
        <description>Field is populated based on goal, can be edited</description>
        <label>Client Engagement Goal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Reference__c</fullName>
        <label>Client Reference</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes, with prior Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Review_Meeting_Goal_Counter__c</fullName>
        <label>Client Review Meeting Goal Counter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Review_Meeting_Goal__c</fullName>
        <label>Client Review Meeting Goal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commitees__c</fullName>
        <label>Commitees</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Compliance__c</fullName>
        <label>Compliance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Consultant_Influence__c</fullName>
        <label>Consultant Influence</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consultant_Meeting_Goal_Counter__c</fullName>
        <label>Consultant Meeting Goal Counter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consultant_Meeting_Goal__c</fullName>
        <label>Consultant Meeting Goal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant_Role__c</fullName>
        <inlineHelpText>Detail the relationship between the Organization and the Consultant</inlineHelpText>
        <label>Consultant Role</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Cross_Sell_Opportunity__c</fullName>
        <label>Cross Sell Opportunity</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Defined_Contribution__c</fullName>
        <inlineHelpText>Research Objectives for DC</inlineHelpText>
        <label>Defined Contribution</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ESG_Reason__c</fullName>
        <label>ESG Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fee_Schedule__c</fullName>
        <label>Fee Schedule</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field_Consultant_Outreach__c</fullName>
        <inlineHelpText>Key Field Consultants</inlineHelpText>
        <label>Field Consultant Outreach</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Firm_Biases__c</fullName>
        <label>Firm Biases</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fixed_Income__c</fullName>
        <inlineHelpText>Research Objectives for Fixed Income Strategies</inlineHelpText>
        <label>Research Goals - Fixed Income</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Fundamental__c</fullName>
        <inlineHelpText>Research Objectives for Fundamental Equity Strategies</inlineHelpText>
        <label>Research Goals - Fundamental</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Goal</label>
        <referenceTo>Goal__c</referenceTo>
        <relationshipLabel>Strategy Plans</relationshipLabel>
        <relationshipName>Strategy_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Goals__c</fullName>
        <label>Goals</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Governance__c</fullName>
        <inlineHelpText>What is the Organization&apos;s decision making structure, investment beliefs, views on sustainability, definition of risk, and measures of success</inlineHelpText>
        <label>Governance</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Implementation__c</fullName>
        <inlineHelpText>How does the Organization select managers and construct their portfolio, what is their appetite for Active versus Passive, how do they benchmark managers, what is their view on fees? For DC, how do they view and serve their participants?</inlineHelpText>
        <label>Implementation</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Importance_of_ESG__c</fullName>
        <label>Importance of ESG</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Institutional_Portfolio_Manager_Goal_Cou__c</fullName>
        <label>Institutional Portfolio Mgr Goal Counter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Institutional_Tier__c</fullName>
        <formula>TEXT(Organization__r.Institutional_Tier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Institutional Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institutional__c</fullName>
        <label>Institutional Portfolio Manager Goal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investment_Policy__c</fullName>
        <inlineHelpText>What is the Organization&apos;s asset allocation strategy, how is it evolving, does the Organization focus on volatility management?</inlineHelpText>
        <label>Investment Policy</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Key_Initiatives__c</fullName>
        <label>Key Initiatives</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Legal__c</fullName>
        <label>Legal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MFS_Strategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MFS Strategy</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Strategy Plans</relationshipLabel>
        <relationshipName>Strategy_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mandate_Details__c</fullName>
        <label>Mandate Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Meeting_Plan__c</fullName>
        <label>Meeting Plan</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Milestones__c</fullName>
        <label>Milestones</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NDA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NDA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Near_Term_Investment__c</fullName>
        <label>Near Term Investment Needs</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>One_Thing_to_Do__c</fullName>
        <label>One Thing to Do</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Strategy Plans</relationshipLabel>
        <relationshipName>Strategy_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <inlineHelpText>Research Objectives for anything not captured above</inlineHelpText>
        <label>Other</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Partnership_Opportunity1__c</fullName>
        <label>Partnership Opportunity</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Partnership_Opportunity__c</fullName>
        <label>Partnership Opportunity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Portfolio_Manager_Meeting_Goal_Counter__c</fullName>
        <label>Portfolio Manager Meeting Goal Counter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portfolio_Manager_Meeting_Goal__c</fullName>
        <label>Portfolio Manager Meeting Goal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recent_Client_Activity__c</fullName>
        <label>Recent Client Activity</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Recent_Issues__c</fullName>
        <label>Recent Issues</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_Background__c</fullName>
        <label>Relationship Background</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Relationship_Status__c</fullName>
        <inlineHelpText>To be used to detail the current relationship status, including any risks or issues</inlineHelpText>
        <label>Relationship Status</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reporting_Complexity__c</fullName>
        <inlineHelpText>Clarify if this client requires non-standard/complex servicing or reporting</inlineHelpText>
        <label>Servicing/Reporting Complexity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Research_Process__c</fullName>
        <label>Research Process</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sales_Status__c</fullName>
        <formula>TEXT(Organization__r.Sales_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Arrangements__c</fullName>
        <label>Special Arrangements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sr_Executive_Meeting_Goal_Counter__c</fullName>
        <label>Sr. Executive Meeting Goal Counter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sr_Executive_Meeting_Goal__c</fullName>
        <label>Sr. Executive Meeting Goal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sr_Investment_Speaker_Goal_Counter__c</fullName>
        <label>Sr. Investment Speaker Goal Counter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sr_Investment_Speaker_Goal__c</fullName>
        <label>Sr. Investment Speaker Goal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategy_Plan_Year__c</fullName>
        <label>Strategy Plan Year</label>
        <picklist>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <label>Strategy</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <label>Strengths</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Thought_Leadership__c</fullName>
        <inlineHelpText>Research Objectives for Thought Leadership</inlineHelpText>
        <label>Thought Leadership</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Threats__c</fullName>
        <label>Threats</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Top_Business_Issues__c</fullName>
        <label>Top Business Issues</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>US_Retail_Tier__c</fullName>
        <formula>TEXT( Organization__r.US_Retail_Tier__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>US Retail Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <label>Weaknesses</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>X3_Things_to_Know__c</fullName>
        <label>Three Things to Know</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <label>Strategy Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Strategy Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategy Plans</pluralLabel>
    <recordTypes>
        <fullName>ARG_Strategy_Plan</fullName>
        <active>true</active>
        <description>For ARG Strategy Plans</description>
        <label>ARG Strategy Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Client_Strategy_Plan</fullName>
        <active>true</active>
        <description>For Inst. Client Strategy Plans</description>
        <label>Client Strategy Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Consultant_Strategy_Plan</fullName>
        <active>true</active>
        <description>For Consultant Strategy Plans</description>
        <label>Consultant Strategy Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prospect_Strategy_Plan</fullName>
        <active>true</active>
        <description>Used to track strategy for Prospect pursuits</description>
        <label>Prospect Strategy Plan</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>